src/pages/homepage/components/Options/Options.module.scss
.container {
    padding: 1rem 0;
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 1rem;
    width: 100%;
    max-width: 1000px;

    @media (max-width: 768px) {
        display: flex;
        flex-wrap: wrap;
    }

    @media (max-width: 500px) {
        display: flex;
        flex-direction: column;
    }
}

.loading {
    margin-top: 1rem;
}

